--- a/qml/QmlResources.qrc
+++ b/qml/QmlResources.qrc
@@ -5,5 +5,6 @@
         <file>pages/ChatPage.qml</file>
         <file>components/ChatsList.qml</file>
         <file>components/NewsCard.qml</file>
+        <file>components/RoundedImage.qml</file>
     </qresource>
 </RCC>
