--- a/resources/Resources.qrc
+++ b/resources/Resources.qrc
@@ -12,6 +12,7 @@
         <file>icons/speaker_off.svg</file>
         <file>icons/speaker_on.svg</file>
         <file>icons/white_complete_mark.svg</file>
+        <file>icons/send.svg</file>
         <file>logos/app_image.svg</file>
         <file>logos/crescent_long.svg</file>
         <file>logos/crescent_short.svg</file>
