--- a/resources/Resources.qrc
+++ b/resources/Resources.qrc
@@ -19,6 +19,7 @@
         <file>themes/default.json</file>
         <file>images/noimage.png</file>
         <file>images/common.png</file>
+        <file>images/login.png</file>
     </qresource>
 
     <qresource prefix="/translations">
