--- a/qml/QmlResources.qrc
+++ b/qml/QmlResources.qrc
@@ -3,6 +3,7 @@
         <file>main.qml</file>
         <file>pages/HomePage.qml</file>
         <file>pages/ChatPage.qml</file>
+        <file>pages/AuthPage.qml</file>
         <file>components/ChatsList.qml</file>
         <file>components/NewsCard.qml</file>
         <file>components/RoundedImage.qml</file>
